@@ -1,6 +1,10 @@
 #$Rev$
 
 [On going]
+1. negative indexes support to find (and similar) methods, thanks for Vadim Voituk.
+
+
+[PHP Simple HTML DOM Parser v1.00 is released]
 1. New method "getAllAttributes" of "simple_html_dom_node".
 2. Fix the bug of selector in some critical conditions.
 3. Fix the bug of striping php tags.
